file with menu added

--- a/index.html
+++ b/index.html
@@ -50,6 +50,65 @@
     <div>
         <h1>Get system information</h1>
         <p>-----------------------------------------------------------------------------------</p>
+        <p>Name:</p>
+        <form action = " " method="POST">
+            <input type="text" name="nombre">
+            <p>Email:</p>
+            <input type="text" name="Email:">
+            <p>Select contact area:</p>
+            <select>
+                <option disabled selected hidden>Select area</option>
+                <option>Montevideo</option>
+                <option>Artigas</option>
+                <option>Canelones</option>
+                <option>Otro</option>
+            </select>
+        </form>
+
+        <label for Cuerpo>Message:
+            <textarea name="texto" rows="3" cols="30"></textarea>
+            <input type="submit" value="Enviar">   
+        </label>
+    </div>
+    <div>
+        <h1>Menu</h1>
+        <p>History</p>
+        <p>About Us</p>
+        <p>Contact Form</p>
+        <p>Sources</p>
+        <h1>About Us</h1>
+        <p>Sed varius enim lorem</p>
+        <p>ullamcorper dolore aliquam</p>
+        <p>aenean ornare velit lactus, ac</p>
+        <p>varius enim lorem ullamcorper</p>
+        <p>dolore.Proin sed aliquam facilisis</p>
+        <p>ante interdum. Sed nulla amet</p>
+        <p>lorem feugiat tempus aliquam</p>
+        <p>trackgenix@info.com</p>
+        <p>1234 Somewhere Road #8254</p>
+        <p>Nashville, TN 00000-0000</p>
+        <button name="button">Get system information</button>
+    </div>
+    <div>
+    <h1>Products</h1>
+    <p>Funcionalities</p>
+    <p>Download</p>
+    <p>Integration</p>
+    <p>Extras</p>
+    <h1>Company</h1>
+    <p>Information</p>
+    <p>Clients</p>
+    <p>Resources</p>
+    <p>Blog</p>
+    <h1>Support</h1>
+    <p>Help</p>
+    <p>Tutorials</p>
+    <p>API</p>
+    <p>Contact</p>
+    </div>
+    <div>
+        <p>Montevideo, Uruguay</p>
+        <p>Copyright 2022 Rdium Rocket. All right reserved.</p>
     </div>
 </body>
 </html>
