final revision with corrections done

--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -5,15 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TRACKGENICS LANDING</title>
+    <link rel="icon" type="image/x-icon" href="https://cdn.worldvectorlogo.com/logos/tether.svg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div class="header">
-        <i class="fa-regular fa-bars"></i>
+        <button><a href="#menu"><i class="fa fa-bars"></i></a></button>
         <a href="#tutorial">Tutorial</a>
         <a href="#contact">Contact</a>
         <input type="text" placeholder="Search..">
-        <i class="fa-solid fa-magnifying-glass"></i>
+        <button><i class="fa fa-search"></i></button>
         <button>Login</button>
         <button>SignUp</button>
     </div>
@@ -26,14 +27,14 @@
         <p>gives you confidence to stay on the site.</p>
     </div>
     <div class="vertical-menu">
-        <h2>Menu</h2>
+        <h2 id="menu">Menu</h2>
         <ul>
             <li><a href="#history">History</a></li>
             <li><a href="#us">About Us</a></li>
             <li><a href="#form">Contact Form</a></li>
             <li><a href="#sources">Sources</a></li>
         </ul>
-        <h2>Contact Us</h2>
+        <h2 id="contact">Contact Us</h2>
         <p>
             Sed varius enim lorem
             ullamcorper dolore aliquam
