--- a/Semana-05/index.html
+++ b/Semana-05/index.html
@@ -7,6 +7,7 @@
     <title>Semana-05</title>
     <script src="exercises/01_variables_and_operators.js"></script>
     <script src="exercises/02-strings.js"></script>
+    <script src="exercises/03-arrays.js"></script>
 </head>
 <body>    
 </body>
