--- a/Semana-05/index.html
+++ b/Semana-05/index.html
@@ -8,6 +8,7 @@
     <script src="exercises/01_variables_and_operators.js"></script>
     <script src="exercises/02-strings.js"></script>
     <script src="exercises/03-arrays.js"></script>
+    <script src="exercises/04-if-else.js"></script>
 </head>
 <body>    
 </body>
